# coding-night2023

./: README.md  package-lock.json  package.json
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs  randomizer.rs  video_provider.rs  wordlist.rs
viewguessr/: package-lock.json  package.json
viewguessr/src/: App.css  App.tsx
viewguessr/src/pages/: Landing.tsx  Result.tsx  SingleResultView.tsx  ViewGuessr.tsx
viewguessr/src/session-state/: SessionState.ts  VideoData.ts
